added reset button, changed board size, scroe counter, and tie function

--- a/ttt.html
+++ b/ttt.html
@@ -7,10 +7,13 @@
     <body>
         <header>
                 <h1>Greasy TIC-TAC-TOE</h1>
+                <div class="btn-container">
+                <a href="#" class="resetbtn" id="resetScore">Reset Score</a>
+                </div>
                 <h3 class="player-1">Player 1 Score: <span id="p1Score">0</span> </h3>
                 <h3 class="player-2">Player 2 Score: <span id="p2Score">0</span> </h3>
                 <h3>Tie: <span id="tie">0</span> </h3>
-                <h3>Turn: <span id="turn">1</span> </h3>
+                <h3>Turn: <span id="turn">P1</span> </h3>
         </header>
 
         <section>
