--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Greasy TIC-TAC-TOE game</title>
-        <link rel="stylesheet" href="ttt.css">
+        <link rel="stylesheet" href="index.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
@@ -35,6 +35,6 @@
                 </div>
             </div>
         </section>
-        <script src="ttt.js"></script>
+        <script src="index.js"></script>
     </body>
 </html>
